# UdemyDesignPatternsModernCPP

./: .gitignore  CMakeLists.txt  README.md  journal.txt
Section002/: OpenClosed.cpp  SingleResponsibility.cpp
